# claude-usage-tracker

./: .gitignore  INSTALL.md  README.md  claude-code-wrapper-v2.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml
electron/: claude-wrapper.js  main-test.js  main.js  preload.js
src/: App.jsx  api.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_upload.rs  claude_wrapper.rs  commands.rs  lib.rs  state.rs  types.rs
src/components/: Dashboard.jsx  LogViewer.jsx  Settings.jsx
