[package]
name = "claude-usage-tracker"
version = "1.0.0"
description = "Claude Code 사용량 추적 및 자동 업로드 앱"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
hostname = "0.4"
log = "0.4"
